# Sorapointa

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.MD  README.zh-CN.MD  build.gradle.kts  format.sh  gradle.properties  local.properties  settings.gradle.kts  versions.properties
.git-hooks/: commit-msg  pre-commit
buildSrc/: build.gradle.kts
config/: .gitignore
docs/: CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  concurrency.md  concurrency.zh-CN.md  database.md  database.zh-CN.md  kotlin-atomicfu.en.md  kotlin-atomicfu.md  kotlin-atomicfu.zh-CN.md  unittest.md  unittest.zh-CN.md
gradle/: libs.versions.toml
langs/: en.lang.json  en.lang.yaml  zh-CN.lang.json  zh-CN.lang.yaml
sorapointa-command/: build.gradle.kts
sorapointa-core/: README.md  README.zh-CN.md  README.zh-Hans.md  build.gradle.kts
sorapointa-crypto/: build.gradle.kts
sorapointa-dataloader/: README.md  README.zh-CN.md  README.zh-Hans.md  build.gradle.kts
sorapointa-dataprovider/: build.gradle.kts
sorapointa-dispatch/: build.gradle.kts
sorapointa-event/: README.md  README.zh-CN.md  build.gradle.kts
sorapointa-i18n/: README.md  README.zh-CN.md  build.gradle.kts
sorapointa-kcp/: build.gradle.kts
sorapointa-lua/: build.gradle.kts
sorapointa-native/: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.gradle.kts
sorapointa-native-wrapper/: README.md  README.zh-CN.md  build.gradle.kts
sorapointa-native/src/: cls.rs  ip.rs  jnienv.rs  kcp.rs  lib.rs  logger.rs  rt.rs  tokio.rs
(+849 files in other folders)
