[package]
name = "spnative"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[lib]
crate_type = ["cdylib"]

[dependencies]
jni = "0.20.0"
anyhow = "1.0"
log = "0.4.17"
once_cell = "1.17.0"
paste = "1.0"
parking_lot = "0.12"
tokio_kcp = { git = "https://github.com/Sorapointa/sp_kcp", rev = "3274a82021ffba753a50a4ebc392e6af68ee5534" }

[dependencies.tokio]
version = "1.20"
default-features = false
features = ["macros", "parking_lot", "rt-multi-thread"]
